[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://camera.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/tile.fbx" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Spawnmanager.gd" type="Script" id=5]
[ext_resource path="res://mob.tscn" type="PackedScene" id=6]
[ext_resource path="res://art/barHorizontal_green.png" type="Texture" id=7]
[ext_resource path="res://CrystalLabel.gd" type="Script" id=8]
[ext_resource path="res://PlayerHealth.gd" type="Script" id=9]
[ext_resource path="res://tower.tscn" type="PackedScene" id=10]
[ext_resource path="res://art/tower.png" type="Texture" id=11]

[sub_resource type="PhysicsMaterial" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 30, 1, 30 )

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Ground" type="StaticBody" parent="."]
physics_material_override = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="tile" parent="Ground" instance=ExtResource( 3 )]
transform = Transform( 60, 0, 0, 0, 1, 0, 0, 0, 60, 0, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.248291, 1.48328, 0.232873 )

[node name="Camera" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.26792, 2.82234, 8.04419 )
distance = 5.0
height = 2.5

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.490721, 0.871317, 2.76083e-08, -0.324497, 0.182755, 0.928064, 0.808637, -0.455421, 0.372421, -4.42466, 11.7161, 0 )

[node name="MobManager" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="MobManager"]
wait_time = 10.0

[node name="mob" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.54731, 1.34255, 2.33135 )

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrystalLabel" type="Label" parent="UserInterface"]
margin_left = 16.0
margin_top = 16.0
margin_right = 70.0
margin_bottom = 30.0
text = "Crystals:"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="TextureProgress" parent="UserInterface"]
margin_left = 360.0
margin_right = 560.0
margin_bottom = 40.0
value = 100.0
texture_progress = ExtResource( 7 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildTower" type="Button" parent="UserInterface"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -104.0
margin_right = 420.0
margin_bottom = 278.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tower" parent="." instance=ExtResource( 10 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 8.48778, 1.24232, 0.00758964 )

[connection signal="hit" from="Player" to="UserInterface/PlayerHealth" method="_on_Player_hit"]
[connection signal="timeout" from="MobManager/Timer" to="MobManager" method="_on_Timer_timeout"]
[connection signal="button_up" from="UserInterface/BuildTower" to="." method="_on_BuildTower_button_up"]
